Bug 415883 - ISBNdb returns no results with multiple ISBN numbers, work with single number lookup
Summary: ISBNdb returns no results with multiple ISBN numbers, work with single number...
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.2.3
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-05 01:57 UTC by tim
Modified: 2020-09-03 01:33 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.3.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tim 2020-01-05 01:57:55 UTC
SUMMARY
ISBNdb returns no results with multiple ISBN numbers, works with single number lookup

STEPS TO REPRODUCE
1. Select multiple ISBN/UPC search in search query window
2. supply line separated list of valid ISBN numbers, either by file or in entry window
3. select ISBNdb search

OBSERVED RESULT
No search results found

EXPECTED RESULT
List of titles returned as per identical ISBN carried out singly.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Ubuntu 20.04
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
I have registered wit ISBN.db and have entered my API key into the access key field. Searches work fine with individual ISBN lookups, just not with multiple ISBN numbers or with a text file. Could this be a field separator problem?
Comment 1 Robby Stephenson 2020-02-29 03:39:43 UTC
Tellico doesn't support searching multiple ISBN values with the ISBNdb. It shouldn't fail silently though. I'll try to fix that.

In any case, the API version that Tellico uses will not be supported after May 1, 2020. (https://isbndb.com/apidocs) I'm working on updating to the new version, but that only supports searching for multiple ISBN values in the Premium and Pro subscription plans. https://isbndb.com/apidocs/v2
Comment 2 Robby Stephenson 2020-09-03 01:33:14 UTC
Git commit 8628c977cbfdb6f6660528fac7ef50b19c9e3603 by Robby Stephenson.
Committed on 03/09/2020 at 01:31.
Pushed by rstephenson into branch '3.3'.

Update ISBNdb data source to search for multiple ISBN values

Per the API documentation, this functionality is only available for
Premium and Pro plans. However, with my current Premium plan, I still
fail to receive results.
FIXED-IN: 3.3.3

M  +4    -0    ChangeLog
M  +45   -13   src/fetch/isbndbfetcher.cpp
M  +1    -3    src/fetch/isbndbfetcher.h
M  +44   -14   src/tests/isbndbfetchertest.cpp

https://invent.kde.org/office/tellico/commit/8628c977cbfdb6f6660528fac7ef50b19c9e3603
Comment 3 Robby Stephenson 2020-09-03 01:33:49 UTC
Git commit 37fcff21eae2e8e3d10bb4884a97ac0b91403be2 by Robby Stephenson.
Committed on 03/09/2020 at 01:31.
Pushed by rstephenson into branch 'master'.

Update ISBNdb data source to search for multiple ISBN values

Per the API documentation, this functionality is only available for
Premium and Pro plans. However, with my current Premium plan, I still
fail to receive results.
FIXED-IN: 3.3.3

M  +4    -0    ChangeLog
M  +45   -13   src/fetch/isbndbfetcher.cpp
M  +1    -3    src/fetch/isbndbfetcher.h
M  +44   -14   src/tests/isbndbfetchertest.cpp

https://invent.kde.org/office/tellico/commit/37fcff21eae2e8e3d10bb4884a97ac0b91403be2