Update ISBNdb data source to search for multiple ISBN values

Per the API documentation, this functionality is only available for
Premium and Pro plans. However, with my current Premium plan, I still
fail to receive results.

BUG: 415883
FIXED-IN: 3.3.3